--- a/wrench/reftests/mask/nested-mask.yaml
+++ b/wrench/reftests/mask/nested-mask.yaml
@@ -1,21 +1,21 @@
 ---
 root:
   items:
-    - type: scroll_layer
+    - type: scroll-layer
       bounds: [0, 0, 95, 88]
       content-size: [95, 88]
       clip:
-        image_mask:
+        image-mask:
           image: "mask.png"
           rect: [0, 0, 35, 35]
           repeat: false
         rect: [0, 0, 95, 88]
       items:
-        - type: scroll_layer
+        - type: scroll-layer
           bounds: [0, 0, 95, 88]
           content-size: [95, 88]
           clip:
-            image_mask:
+            image-mask:
               image: "mask.png"
               rect: [4, 4, 35, 35]
               repeat: false
