--- a/wrench/reftests/scrolling/fixed-position.yaml
+++ b/wrench/reftests/scrolling/fixed-position.yaml
@@ -4,7 +4,7 @@ root:
   scroll-offset: [0, 100]
   items:
     # This stacking context should not scroll out of view because it is fixed position.
-    - type: stacking_context
+    - type: stacking-context
       bounds: [0, 0, 50, 50]
       scroll-policy: fixed
       items:
@@ -15,11 +15,11 @@ root:
     # because it is fixed relative to its reference frame. The reference frame
     # of this stacking context is the stacking context parent because it has
     # a transformation.
-    - type: stacking_context
+    - type: stacking-context
       bounds: [0, 0, 50, 50]
       transform: translate(60, 100)
       items:
-        - type: stacking_context
+        - type: stacking-context
           bounds: [0, 0, 50, 50]
           scroll-policy: fixed
           items:
@@ -28,11 +28,11 @@ root:
               color: green
     # This is similar to the previous case, but ensures that this still works
     # even with an identity transform.
-    - type: stacking_context
+    - type: stacking-context
       bounds: [120, 0, 50, 200]
       transform: translate(0, 0)
       items:
-        - type: stacking_context
+        - type: stacking-context
           bounds: [0, 0, 50, 200]
           scroll-policy: fixed
           items:
@@ -40,11 +40,11 @@ root:
               bounds: [0, 100, 50, 50]
               color: green
     # This is similar to the previous case, but for perspective.
-    - type: stacking_context
+    - type: stacking-context
       bounds: [180, 0, 50, 200]
       perspective: 1
       items:
-        - type: stacking_context
+        - type: stacking-context
           bounds: [0, 0, 50, 200]
           scroll-policy: fixed
           items:
@@ -53,11 +53,11 @@ root:
               color: green
     # This is similar to the previous case, but since the perspective is
     # 0 (equivalent to none), it shouldn't scroll.
-    - type: stacking_context
+    - type: stacking-context
       bounds: [240, 0, 50, 200]
       perspective: 0
       items:
-        - type: stacking_context
+        - type: stacking-context
           bounds: [0, 0, 50, 200]
           scroll-policy: fixed
           items:
