--- a/wrench/reftests/blend/difference.yaml
+++ b/wrench/reftests/blend/difference.yaml
@@ -4,7 +4,7 @@ root:
         - type: rect
           bounds: [0, 0, 100, 100]
           color: green
-        - type: stacking_context
+        - type: stacking-context
           bounds: [0, 0, 100, 100]
           mix-blend-mode: difference
           items:
