--- a/wrench/reftests/blend/isolated-2-ref.yaml
+++ b/wrench/reftests/blend/isolated-2-ref.yaml
@@ -4,13 +4,13 @@ root:
     - type: rect
       bounds: [10, 10, 130, 130]
       color: [255, 255, 0]
-    - type: stacking_context
+    - type: stacking-context
       bounds: [10, 10, 130, 130]
       items:
         - type: rect
           bounds: [0, 0, 100, 100]
           color: [0, 255, 0]
-        - type: stacking_context
+        - type: stacking-context
           bounds: [20, 20, 100, 100]
           items:
             - type: rect
