--- a/wrench/reftests/blend/isolated-2.yaml
+++ b/wrench/reftests/blend/isolated-2.yaml
@@ -9,13 +9,13 @@ root:
       # inside there should be overlapping red and green rects
       # where they intersect should be a black rect
       # the rects should not blend with the yellow backdrop
-    - type: stacking_context
+    - type: stacking-context
       bounds: [10, 10, 130, 130]
       items:
         - type: rect
           bounds: [0, 0, 100, 100]
           color: [0, 255, 0]
-        - type: stacking_context
+        - type: stacking-context
           bounds: [20, 20, 100, 100]
           mix-blend-mode: multiply
           items:
