--- a/wrench/reftests/blend/isolated-with-filter.yaml
+++ b/wrench/reftests/blend/isolated-with-filter.yaml
@@ -5,11 +5,11 @@ root:
           bounds: [0, 0, 100, 100]
           color: [255, 0, 0]
           # the presence of this filter shouldn't break isolated groups
-        - type: stacking_context
+        - type: stacking-context
           bounds: [0, 0, 100, 100]
           filters: opacity(1.0)
           items:
-            - type: stacking_context
+            - type: stacking-context
               bounds: [0, 0, 100, 100]
               mix-blend-mode: difference
               items:
