--- a/wrench/reftests/blend/lighten.yaml
+++ b/wrench/reftests/blend/lighten.yaml
@@ -4,7 +4,7 @@ root:
         - type: rect
           bounds: [0, 0, 100, 100]
           color: [10, 20, 30]
-        - type: stacking_context
+        - type: stacking-context
           bounds: [0, 0, 100, 100]
           mix-blend-mode: lighten
           items:
