--- a/wrench/reftests/blend/multiply-2.yaml
+++ b/wrench/reftests/blend/multiply-2.yaml
@@ -4,7 +4,7 @@ root:
         - type: rect
           bounds: [0, 0, 100, 100]
           color: [0, 255, 0]
-        - type: stacking_context
+        - type: stacking-context
           bounds: [0, 0, 100, 100]
           mix-blend-mode: multiply
           items:
