--- a/wrench/reftests/blend/multiply.yaml
+++ b/wrench/reftests/blend/multiply.yaml
@@ -4,7 +4,7 @@ root:
         - type: rect
           bounds: [0, 0, 100, 100]
           color: green
-        - type: stacking_context
+        - type: stacking-context
           bounds: [25, 25, 50, 50]
           mix-blend-mode: multiply
           items:
