--- a/wrench/reftests/border/border-double-simple-ref.yaml
+++ b/wrench/reftests/border/border-double-simple-ref.yaml
@@ -1,7 +1,7 @@
 ---
 root:
   items:
-    - type: stacking_context
+    - type: stacking-context
       bounds: [0, 0, 50, 50]
       items:
         - type: border
@@ -10,7 +10,7 @@ root:
           border-type: normal
           style: [ solid, solid, solid, solid ]
           color: [ blue, blue, blue, blue ]
-    - type: stacking_context
+    - type: stacking-context
       bounds: [8, 8, 34, 34]
       items:
         - type: border
