--- a/wrench/reftests/border/border-double-simple.yaml
+++ b/wrench/reftests/border/border-double-simple.yaml
@@ -1,7 +1,7 @@
 ---
 root:
   items:
-    - type: stacking_context
+    - type: stacking-context
       bounds: [0, 0, 500, 500]
       items:
         - type: border
