--- a/wrench/reftests/boxshadow/inset-simple-ref.yaml
+++ b/wrench/reftests/boxshadow/inset-simple-ref.yaml
@@ -1,7 +1,7 @@
 ---
 root:
   items:
-        - type: stacking_context
+        - type: stacking-context
           bounds: [50, 50, 100, 100]
           items:
             - type: rect
