--- a/wrench/reftests/filters/filter-grayscale.yaml
+++ b/wrench/reftests/filters/filter-grayscale.yaml
@@ -1,7 +1,7 @@
 ---
 root:
   items:
-        - type: stacking_context
+        - type: stacking-context
           bounds: [10, 10, 200, 200]
           filters: grayscale(1)
           items:
