--- a/wrench/reftests/filters/isolated-ref.yaml
+++ b/wrench/reftests/filters/isolated-ref.yaml
@@ -4,7 +4,7 @@ root:
         - type: rect
           bounds: [0, 0, 100, 100]
           color: [0, 0, 0]
-        - type: stacking_context
+        - type: stacking-context
           bounds: [0, 0, 100, 100]
           filters: opacity(0.5)
           items:
