--- a/wrench/reftests/image/tile-repeat-prim-or-decompose-ref.yaml
+++ b/wrench/reftests/image/tile-repeat-prim-or-decompose-ref.yaml
@@ -1,8 +1,8 @@
 root:
   items:
-    - image: xy_gradient(500, 50)
+    - image: xy-gradient(500, 50)
       bounds: 0 0 800 800
-      stretch_size: 50 50
-    - image: xy_gradient(50, 500)
+      stretch-size: 50 50
+    - image: xy-gradient(50, 500)
       bounds: 800 0 800 800
-      stretch_size: 50 50
+      stretch-size: 50 50
