--- a/wrench/reftests/image/tile-repeat-prim-or-decompose.yaml
+++ b/wrench/reftests/image/tile-repeat-prim-or-decompose.yaml
@@ -4,14 +4,14 @@ root:
     # This should cause the primitive repetition to be decomposed on the cpu along the x axis
     # but perform the repetition along the y axis on the image shader because the image width
     # fits within the tile size.
-    - image: xy_gradient(500, 50)
+    - image: xy-gradient(500, 50)
       bounds: 0 0 800 800
-      stretch_size: 50 50
+      stretch-size: 50 50
       tile-size: 50
     # This should cause the primitive repetition to be decomposed on the cpu along the y axis
     # but perform the repetition along the x axis in the image shader because the image height
     # fits within the tile size.
-    - image: xy_gradient(50, 500)
+    - image: xy-gradient(50, 500)
       bounds: 800 0 800 800
-      stretch_size: 50 50
+      stretch-size: 50 50
       tile-size: 50
