--- a/wrench/reftests/image/tile-with-spacing-ref.yaml
+++ b/wrench/reftests/image/tile-with-spacing-ref.yaml
@@ -1,6 +1,6 @@
 root:
   items:
-    - image: solid_color(255, 0, 0, 255, 300, 300)
+    - image: solid-color(255, 0, 0, 255, 300, 300)
       bounds: 0 0 800 800
-      stretch_size: 200 200
-      tile_spacing: 10 10
+      stretch-size: 200 200
+      tile-spacing: 10 10
