--- a/wrench/reftests/image/tile-with-spacing.yaml
+++ b/wrench/reftests/image/tile-with-spacing.yaml
@@ -4,9 +4,9 @@ root:
     # of a solid color. To do this we first need to change the way pixel snapping is
     # applied so that when an image is split into several primitives, so that the latter
     # all get snapped the same way rather than independently.
-    #- image: xy_gradient(300, 300)
-    - image: solid_color(255, 0, 0, 255, 300, 300)
+    #- image: xy-gradient(300, 300)
+    - image: solid-color(255, 0, 0, 255, 300, 300)
       bounds: 0 0 800 800
-      stretch_size: 200 200
-      tile_spacing: 10 10
+      stretch-size: 200 200
+      tile-spacing: 10 10
       tile-size: 64
