--- a/wrench/reftests/image/very-big.yaml
+++ b/wrench/reftests/image/very-big.yaml
@@ -1,5 +1,5 @@
 root:
   items:
-    - image: solid_color(255, 0, 0, 255, 100000, 1000)
+    - image: solid-color(255, 0, 0, 255, 100000, 1000)
       bounds: 0 0 500 500
-      stretch_size: 1000000 1000
+      stretch-size: 1000000 1000
