--- a/wrench/reftests/mask/mask-transformed-to-empty-rect.yaml
+++ b/wrench/reftests/mask/mask-transformed-to-empty-rect.yaml
@@ -1,18 +1,18 @@
 ---
 root:
   items:
-    - type: stacking_context
+    - type: stacking-context
       clip: [0, 0, 300, 300]
       bounds: [0, 0, 300, 300]
       "scroll-policy": scrollable
-      z_index: 4
+      z-index: 4
       transform: [1, 0, 0, 0, 0, 0, 1, 0, 0, -1, 0, 0, 0, 150, -150, 1]
       items:
-        - type: scroll_layer
+        - type: scroll-layer
           bounds: [0, 0, 300, 300]
           clip:
             rect: [0, 0, 300, 300]
-            image_mask:
+            image-mask:
               # This image mask here assures that we will be forced to try to
               # mask instead of skipping it due to the mask rect becoming a
               # zero rect.
