--- a/wrench/reftests/mask/mask.yaml
+++ b/wrench/reftests/mask/mask.yaml
@@ -5,7 +5,7 @@ root:
       bounds: [0, 0, 95, 88]
       color: blue
       clip:
-        image_mask:
+        image-mask:
           image: "mask.png"
           rect: [0, 0, 35, 35]
           repeat: false
