--- a/wrench/reftests/scrolling/scroll-layer-with-mask.yaml
+++ b/wrench/reftests/scrolling/scroll-layer-with-mask.yaml
@@ -2,19 +2,19 @@ root:
   items:
     -
       clip: [0, 0, 100, 100]
-      type: stacking_context
+      type: stacking-context
       # We give this stacking context a little offset here to
       # ensure that offsets within reference frames are handled
       # properly when drawing the mask.
       bounds: [10, 10, 100, 100]
       scroll-policy: scrollable
       items:
-      - type: scroll_layer
+      - type: scroll-layer
         bounds: [0, 0, 100, 100]
         content-size: [100, 100]
         clip:
           rect: [0, 0, 100, 100]
-          image_mask:
+          image-mask:
             image: "mask.png"
             rect: [0, 0, 100, 100]
             repeat: false
@@ -25,17 +25,17 @@ root:
 
     # The same test, but this time ensure that scroll offsets don't affect the masking.
     -
-      type: stacking_context
+      type: stacking-context
       bounds: [100, 0, 100, 100]
       clip: [0, 0, 100, 300]
       scroll-policy: scrollable
       items:
-      - type: scroll_layer
+      - type: scroll-layer
         bounds: [10, 10, 100, 100]
         content-size: [100, 300]
         scroll-offset: [0, 100]
         clip:
-          image_mask:
+          image-mask:
             image: "mask.png"
             rect: [0, 0, 100, 100]
             repeat: false
