--- a/wrench/reftests/scrolling/simple.yaml
+++ b/wrench/reftests/scrolling/simple.yaml
@@ -1,13 +1,13 @@
 root:
   items:
-    - type: scroll_layer
+    - type: scroll-layer
       bounds: [10, 10, 50, 50]
       content-size: [100, 100]
       items:
         - type: rect
           bounds: [10, 10, 500, 500]
           color: green
-    - type: scroll_layer
+    - type: scroll-layer
       bounds: [70, 10, 50, 50]
       content-size: [100, 100]
       items:
