--- a/wrench/res/rect.yaml
+++ b/wrench/res/rect.yaml
@@ -8,5 +8,5 @@ root:
           bounds: 0 0 1024 768
           color: green
           type: rect
-      type: stacking_context
-      z_index: 1
+      type: stacking-context
+      z-index: 1
