--- a/wrench/res/rotate.yaml
+++ b/wrench/res/rotate.yaml
@@ -9,5 +9,5 @@ root:
           bounds: [100, 100, 100, 100]
           type: rect
           color: blue
-      type: stacking_context
+      type: stacking-context
 
