Add a define_scroll_frame API
This makes it explicit whether or not you are creating a ScrollFrame
when using the API. Before this was based on the content size of the
clip, which was awkward and could lead to weird situations where you
created a ScrollFrame when you didn't mean to or the reverse.

Fixes #1335.

--- a/wrench/reftests/mask/nested-mask.yaml
+++ b/wrench/reftests/mask/nested-mask.yaml
@@ -1,14 +1,14 @@
 ---
 root:
   items:
-    - type: scroll-layer
+    - type: clip
       bounds: [0, 0, 95, 88]
       image-mask:
         image: "mask.png"
         rect: [0, 0, 35, 35]
         repeat: false
       items:
-        - type: scroll-layer
+        - type: clip
           bounds: [0, 0, 95, 88]
           image-mask:
             image: "mask.png"
