--- a/wrench/reftests/scrolling/fixed-position-scrolling-clip.yaml
+++ b/wrench/reftests/scrolling/fixed-position-scrolling-clip.yaml
@@ -1,6 +1,6 @@
 root:
   items:
-    - type: scroll-layer
+    - type: scroll-frame
       bounds: [10, 10, 100, 300]
       content-size: [100, 700]
       id: 41
