--- a/wrench/reftests/mask/aligned-layer-rect.yaml
+++ b/wrench/reftests/mask/aligned-layer-rect.yaml
@@ -1,11 +1,11 @@
 ---
 root:
   items:
-    - type: scroll-layer
+    - type: scroll-frame
       bounds: [9, 9, 10, 10]
       content-size: [95, 88]
       items:
-        - type: scroll-layer
+        - type: scroll-frame
           bounds: [0, 0, 100, 100]
           items:
             - type: rect
