--- a/wrench/reftests/scrolling/empty-mask.yaml
+++ b/wrench/reftests/scrolling/empty-mask.yaml
@@ -3,7 +3,7 @@ root:
     - type: rect
       bounds: [0, 0, 100, 100]
       color: green
-    - type: scroll-layer
+    - type: scroll-frame
       bounds: [0, 0, 100, 100]
       items:
         - type: clip
