--- a/wrench/reftests/scrolling/nested-scroll-offset.yaml
+++ b/wrench/reftests/scrolling/nested-scroll-offset.yaml
@@ -1,14 +1,14 @@
 root:
   items:
-    - type: scroll-layer
+    - type: scroll-frame
       bounds: [0, 0, 500, 500]
       content-size: [1000, 1000]
       scroll-offset: [0, 300]
       items:
-      - type: scroll-layer
+      - type: scroll-frame
         bounds: [0, 300, 50, 50]
         items:
-        - type: scroll-layer
+        - type: scroll-frame
           bounds: [0, 300, 50, 50]
           items:
             - type: rect
