--- a/wrench/reftests/scrolling/out-of-bounds-scroll.yaml
+++ b/wrench/reftests/scrolling/out-of-bounds-scroll.yaml
@@ -1,6 +1,6 @@
 root:
   items:
-    - type: scroll-layer
+    - type: scroll-frame
       bounds: [10, 10, 50, 100]
       content-size: [50, 200]
       scroll-offset: [0, 50]
