--- a/wrench/reftests/text/shadow-many.yaml
+++ b/wrench/reftests/text/shadow-many.yaml
@@ -5,7 +5,15 @@ root:
           bounds: [14, 18, 205, 35]
           glyphs: [55, 75, 76, 86, 3, 76, 86, 3, 87, 75, 72, 3, 69, 72, 86, 87]
           offsets: [16, 43, 35.533333, 43, 51.533333, 43, 60.4, 43, 72.833336, 43, 80.833336, 43, 89.7, 43, 102.13333, 43, 110.13333, 43, 119, 43, 135, 43, 149.2, 43, 157.2, 43, 173.2, 43, 187.4, 43, 196.26666, 43]
-          shadows: { color: black, blur-radius: 5, offset: [0, 0] }
+          shadows:
+            -
+              color: black
+              blur-radius: 5
+              offset: [1, 3]
+            -
+              color: red
+              blur-radius: 3
+              offset: [-3, -2.5]
           size: 18
-          color: [0, 0, 0, 0] # hide the actual text
+          color: black
           font: "VeraBd.ttf"
