--- a/wrench/reftests/split/nested.yaml
+++ b/wrench/reftests/split/nested.yaml
@@ -1,8 +1,9 @@
-# This tests have a non-preserve3d stacking context nested within
-# preserve-3d sub-tree. This nested context is still getting baked in
-# and participates (as a whole) in plane splitting.
-# It is layed out in the same plane as the parent, so should be ordered
-# last, given that it's coming later than the parent.
+# This tests have a A(3D) -> B(2D) -> C(3D) context chain.
+# All 3 contexts end up getting baked, but C last one doesn't participate in the
+# same plane splitting pass as `A` and `B`, because it's separated from them by a
+# non-preserve-3D parent `B`.
+# `B` is layed out in the same plane as the parent, so should be ordered
+# after `A`, given that it's coming later than the parent.
 ---
 root:
   items:
@@ -23,3 +24,11 @@ root:
                 - type: rect
                   bounds: [0, 0, 600, 200]
                   color: green
+                - type: stacking-context
+                  bounds: [0, 0, 600, 200]
+                  transform-style: preserve-3d
+                  transform: rotate-x(60.0)
+                  items:
+                    - type: rect
+                      bounds: [0, 0, 600, 200]
+                      color: blue
