--- a/webrender/Cargo.toml
+++ b/webrender/Cargo.toml
@@ -22,6 +22,7 @@ fnv = "1.0"
 gleam = "0.4.7"
 lazy_static = "0.2"
 log = "0.3"
+nanovg = {version = "0.3", features = ["gl2"]}
 num-traits = "0.1.32"
 offscreen_gl_context = {version = "0.11", features = ["serde", "osmesa"], optional = true}
 time = "0.1"
