--- a/wrench/reftests/text/shadow-cover-2.yaml
+++ b/wrench/reftests/text/shadow-cover-2.yaml
@@ -2,6 +2,13 @@
 root:
   items:
         -
+          bounds: [14, 18, 205, 35]
+          glyphs: [55, 75, 76, 86, 3, 76, 86, 3, 87, 75, 72, 3, 69, 72, 86, 87]
+          offsets: [16, 43, 35.533333, 43, 51.533333, 43, 60.4, 43, 72.833336, 43, 80.833336, 43, 89.7, 43, 102.13333, 43, 110.13333, 43, 119, 43, 135, 43, 149.2, 43, 157.2, 43, 173.2, 43, 187.4, 43, 196.26666, 43]
+          size: 18
+          color: green
+          font: "VeraBd.ttf"
+        -
           type: "text-shadow"
           bounds: [14, 18, 205, 35]
           blur-radius: 3
@@ -16,10 +23,4 @@ root:
           font: "VeraBd.ttf"
         -
           type: "pop-text-shadow"
-        -
-          bounds: [14, 18, 205, 35]
-          glyphs: [55, 75, 76, 86, 3, 76, 86, 3, 87, 75, 72, 3, 69, 72, 86, 87]
-          offsets: [16, 43, 35.533333, 43, 51.533333, 43, 60.4, 43, 72.833336, 43, 80.833336, 43, 89.7, 43, 102.13333, 43, 110.13333, 43, 119, 43, 135, 43, 149.2, 43, 157.2, 43, 173.2, 43, 187.4, 43, 196.26666, 43]
-          size: 18
-          color: green # text transparent
-          font: "VeraBd.ttf"
+
