--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,6 @@ script:
   - if [ $BUILD_KIND = DEBUG ]; then (cd webrender_api && cargo test --verbose --features "ipc"); fi
   - if [ $BUILD_KIND = DEBUG ]; then (cd webrender && cargo build --verbose --no-default-features); fi
   - if [ $BUILD_KIND = DEBUG ]; then (cargo test --all --verbose); fi
+  - if [ $BUILD_KIND = DEBUG ]; then (cd wrench && cargo run -- --save binary png reftests/text/decorations.yaml && cargo run -- replay --play wr-record.bin); fi
   - if [ $BUILD_KIND = RELEASE ]; then (cd wrench && python headless.py reftest); fi
   - if [ $TRAVIS_RUST_VERSION == "nightly" ]; then (cd webrender && cargo bench --verbose); fi
