--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,8 +3,8 @@ environment:
   RUST_BACKTRACE: 1
 
 install:
-  - ps: Start-FileDownload "https://static.rust-lang.org/dist/rust-nightly-x86_64-pc-windows-gnu.msi"
-  - msiexec /passive /i "rust-nightly-x86_64-pc-windows-gnu.msi" ADDLOCAL=Rustc,Cargo,Std INSTALLDIR=C:\Rust
+  - ps: Start-FileDownload "https://static.rust-lang.org/dist/rust-1.19.0-x86_64-pc-windows-gnu.msi"
+  - msiexec /passive /i "rust-1.19.0-x86_64-pc-windows-gnu.msi" ADDLOCAL=Rustc,Cargo,Std INSTALLDIR=C:\Rust
   - bash -lc "pacman -S --noconfirm mingw-w64-x86_64-freetype mingw-w64-x86_64-cmake"
   - rustc -V
   - cargo -V
