--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,22 @@ addons:
     sources:
       - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
         keyurl: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+      - sourceline: 'ppa:jonathonf/python-2.7'
     packages:
       - libgl1-mesa-dev
       - llvm-3.8-dev
       - libedit-dev
+      - python
 env:
   - BUILD_KIND=DEBUG RUST_BACKTRACE=1 RUSTFLAGS='--deny warnings'
   - BUILD_KIND=RELEASE RUST_BACKTRACE=1 RUSTFLAGS='--deny warnings'
 before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install zlib; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PKG_CONFIG_PATH="/usr/local/opt/zlib/lib/pkgconfig:$PKG_CONFIG_PATH"; fi
+  - virtualenv ../venv
+  - source ../venv/bin/activate
+  - python --version
   - pip install mako servo-tidy
 script:
   - servo-tidy
