--- a/wrench/reftests/gradient/premultiplied-angle-2.yaml
+++ b/wrench/reftests/gradient/premultiplied-angle-2.yaml
@@ -5,4 +5,4 @@ root:
       bounds: 50 50 200 200
       start: 0 0
       end: 200 200
-      stops: [0.0, red, 0.5, [0.0, 0.0, 0.0, 0.0], 1.0, green]
+      stops: [0.0, [255.0, 0.0, 0.0, 0.5], 0.5, [0.0, 255.0, 0.0, 0.5], 1.0, [0.0, 0.0, 255.0, 0.5]]
